tests/fail/fail_nested_function.kr
fn inisiu() {
    fn inner() {
        mostran("inner");
    }
    mostran("outer");
}
